[gd_scene load_steps=16 format=3 uid="uid://cenkshvhr4nk1"]

[ext_resource type="Script" path="res://src/ui/map_ui.gd" id="1_ph7jl"]
[ext_resource type="Texture2D" uid="uid://dcllbm3ppijw4" path="res://resource/img/ui/map-zoom-out.svg" id="1_qwrav"]
[ext_resource type="Texture2D" uid="uid://bd3je47endijg" path="res://resource/img/ui/map-zoom-in.svg" id="2_fvjvq"]
[ext_resource type="Texture2D" uid="uid://1tlj1sgsjrd4" path="res://resource/img/ui/icon-holo.svg" id="2_u0g2b"]
[ext_resource type="Script" path="res://src/ui/widget/silder.gd" id="4_k5v2o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe46q"]
corner_radius_top_left = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_lh0vc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(333, 216)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapControl/FloorSelectBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h40xy"]
resource_name = "hide_floor"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(333, 216), Vector2(333, 183)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapControl/FloorSelectBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ma1v5"]
resource_name = "show_floor"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Vector2(333, 183), Vector2(333, 216)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MapControl/FloorSelectBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qebfd"]
_data = {
"RESET": SubResource("Animation_lh0vc"),
"hide_floor": SubResource("Animation_h40xy"),
"show_floor": SubResource("Animation_ma1v5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkujh"]
bg_color = Color(0.227451, 0.247059, 0.282353, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Animation" id="Animation_coqwi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MapTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MapTitle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ZoomControl:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ZoomControl:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gwm4t"]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MapTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MapTitle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ZoomControl:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ZoomControl:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_xdyte"]
resource_name = "new_animation"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MapTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MapTitle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ZoomControl:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ZoomControl:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mxge1"]
_data = {
"RESET": SubResource("Animation_coqwi"),
"hide_ui": SubResource("Animation_gwm4t"),
"show_ui": SubResource("Animation_xdyte")
}

[node name="MapUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ph7jl")
metadata/_edit_vertical_guides_ = [1587.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8, 0.8, 0.8, 1)

[node name="Panel" type="Panel" parent="."]
editor_description = "如果漂移到别的地方了，就把x坐标减去窗口长度
初始位置x:1587"
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -333.0
offset_bottom = 216.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_qe46q")
metadata/_edit_lock_ = true

[node name="MapControl" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -327.0
offset_top = 117.0
offset_right = -5.0
offset_bottom = 209.0
grow_horizontal = 0

[node name="WorldSelectBox" type="Control" parent="Panel/MapControl"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MapControl/WorldSelectBox"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 134.0
offset_bottom = 11.5
grow_vertical = 2
text = "{lbl_select_world}"

[node name="WorldSelect" type="OptionButton" parent="Panel/MapControl/WorldSelectBox"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2

[node name="MapSelectBox" type="Control" parent="Panel/MapControl"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="MapSelect" type="OptionButton" parent="Panel/MapControl/MapSelectBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FloorSelectBox" type="Control" parent="Panel/MapControl"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="FloorSelect" type="OptionButton" parent="Panel/MapControl/FloorSelectBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnHolo" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -115.0
offset_top = 83.0
offset_right = -6.0
offset_bottom = 114.0
grow_horizontal = 0
disabled = true
text = "{btn_holo}"
icon = ExtResource("2_u0g2b")
icon_alignment = 2

[node name="BtnSetting" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -115.0
offset_top = 49.0
offset_right = -6.0
offset_bottom = 80.0
grow_horizontal = 0
text = "{btn_setting}"

[node name="BtnResetCamera" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -258.0
offset_top = 49.0
offset_right = -120.0
offset_bottom = 80.0
grow_horizontal = 0
text = "{btn_reset_cam}"

[node name="BtnExit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -91.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 37.0
grow_horizontal = 0
text = "{btn_exit}"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
"": SubResource("AnimationLibrary_qebfd")
}

[node name="MapTitle" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 31.0
offset_top = 48.0
offset_right = 250.0
offset_bottom = 112.0
scale = Vector2(1.3, 1.3)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="MapTitle"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 64.0
grow_vertical = 2

[node name="LblMap" type="Label" parent="MapTitle"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 71.5
offset_top = 12.0
offset_right = 144.5
offset_bottom = 35.0
text = "{lbl_map}"

[node name="LblWorld" type="Label" parent="MapTitle"]
modulate = Color(0.333333, 0.333333, 0.333333, 1)
layout_mode = 1
offset_left = 71.5
offset_top = 38.0
offset_right = 154.5
offset_bottom = 61.0
scale = Vector2(0.8, 0.8)
text = "{lbl_world}"

[node name="ZoomControl" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -70.0
offset_right = 209.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(200, 15)
theme_override_styles/panel = SubResource("StyleBoxFlat_fkujh")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="BtnZoomOut" type="TextureButton" parent="ZoomControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -10.0
offset_right = 22.0
offset_bottom = 6.0
grow_vertical = 2
scale = Vector2(1.2, 1.2)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_qwrav")
texture_pressed = ExtResource("1_qwrav")
texture_hover = ExtResource("1_qwrav")
texture_focused = ExtResource("1_qwrav")

[node name="SliderZoom" type="HSlider" parent="ZoomControl" groups=["ZoomSlider"]]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -8.0
offset_right = -30.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
value = 1.0
script = ExtResource("4_k5v2o")

[node name="BtnZoomIn" type="TextureButton" parent="ZoomControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -10.0
offset_right = -9.0
offset_bottom = 6.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.2, 1.2)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_fvjvq")
texture_pressed = ExtResource("2_fvjvq")
texture_hover = ExtResource("2_fvjvq")
texture_focused = ExtResource("2_fvjvq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mxge1")
}

[connection signal="item_selected" from="Panel/MapControl/WorldSelectBox/WorldSelect" to="." method="_on_world_select_item_selected"]
[connection signal="item_selected" from="Panel/MapControl/MapSelectBox/MapSelect" to="." method="_on_map_select_item_selected"]
[connection signal="item_selected" from="Panel/MapControl/FloorSelectBox/FloorSelect" to="." method="_on_floor_select_item_selected"]
[connection signal="pressed" from="Panel/BtnHolo" to="." method="_on_btn_holo_pressed"]
[connection signal="pressed" from="Panel/BtnSetting" to="." method="_on_btn_setting_pressed"]
[connection signal="pressed" from="Panel/BtnResetCamera" to="." method="_on_btn_reset_camera_pressed"]
[connection signal="pressed" from="Panel/BtnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="ZoomControl/BtnZoomOut" to="." method="_on_btn_zoom_out_pressed"]
[connection signal="value_changed" from="ZoomControl/SliderZoom" to="." method="_on_slider_zoom_value_changed"]
[connection signal="pressed" from="ZoomControl/BtnZoomIn" to="." method="_on_btn_zoom_in_pressed"]
